DuPont DevSB/src/objects/ccrz__E_OrderItemPricingTier__c.object
<CustomObject>
    <description>When pricing tiers are applied to the lines this object contains the details of those tiers.</description>
    <fields>
        <fullName>ccrz__OrderItem__c</fullName>
        <description>Reference to the order line item this tier applies to.</description>
        <label>Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>CC Order Item Pricing Tiers</relationshipLabel>
        <relationshipName>CC_Order_Item_Pricing_Tiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Price__c</fullName>
        <description>The price for the tier.</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <description>The quantity that the tier applies to.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SubAmount__c</fullName>
        <description>The line total for the tier.</description>
        <label>SubAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CC Order Item Pricing Tier</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>CC Order Item Pricing Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Order Item Pricing Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>